Fix header wrapping on Mac

--- a/assets/SASS/partials/components/_header.scss
+++ b/assets/SASS/partials/components/_header.scss
@@ -11,7 +11,7 @@
 		@include breakpoint(medium) {
 			border: 1px solid $col-nav-border;
 			padding: 11px 62px;
-			width: 542px;
+			width: 551px;
 		}
 		a {
 			border-bottom: 1px solid $col-nav-border;
